--- a/week6/QTApplicationWithCommunicatingClass/mainwindow.ui
+++ b/week6/QTApplicationWithCommunicatingClass/mainwindow.ui
@@ -14,31 +14,24 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLineEdit" name="text1">
+   <widget class="QPushButton" name="nappi">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>230</y>
-      <width>113</width>
-      <height>25</height>
+      <x>140</x>
+      <y>100</y>
+      <width>93</width>
+      <height>29</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="Text2">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>230</y>
-      <width>113</width>
-      <height>25</height>
-     </rect>
+    <property name="text">
+     <string>PushButton</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="kolmas">
+   <widget class="QLineEdit" name="teksti">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>410</y>
+      <x>280</x>
+      <y>100</y>
       <width>113</width>
       <height>25</height>
      </rect>
