--- a/week7/KotitehtavaEkaVaihe/mainwindow.ui
+++ b/week7/KotitehtavaEkaVaihe/mainwindow.ui
@@ -14,31 +14,37 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLineEdit" name="text1">
+   <widget class="QPushButton" name="Count">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>230</y>
-      <width>113</width>
-      <height>25</height>
+      <x>260</x>
+      <y>40</y>
+      <width>93</width>
+      <height>29</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="Text2">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>230</y>
-      <width>113</width>
-      <height>25</height>
-     </rect>
+    <property name="text">
+     <string>Count</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="kolmas">
+   <widget class="QPushButton" name="Reset">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>410</y>
+      <x>60</x>
+      <y>170</y>
+      <width>93</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>140</y>
       <width>113</width>
       <height>25</height>
      </rect>
